compiler/test/fail/math_string_arg.js
// Cannot do math operation with non-numerical literal.
Math.abs("1");
